--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "firebase": "^4.6.2",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "materialize-css": "^0.100.2"
   }
 }
