--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
         "no-console": ["warn"],
         "no-useless-escape": ["warn"],
         "no-unused-vars": ["warn"],
-        "indent": ["error", "tab"],
+        "indent": ["error", 4],
         "semi": 0,
         "quotes": ["error", "double"],
         "eqeqeq": 2,
